# waiter

./: .gitignore  Dockerfile  README.md  add_user.py  ansible.cfg  ansible_deploy_service.py  ansible_deploy_service.service  become-pass.sh  compose.yml  create_users.yaml  cron_cd.sh  cuda_12_6_1_ubuntu_22.yaml  cuda_12_6_1_ubuntu_24.yaml  deploy_ansible.sh  docker_ubuntu_22.yaml  docker_ubuntu_24.yaml  floonoc.yaml  inventory.yaml  ipmi_exporter.service  label_studio.yaml  monitoring.yaml  nix-package_manager.yaml  nix_package_manager.yaml  nvidia-container-toolkit_ubuntu_24.yaml  nvidia-container-toolkit_ubuntu_24.yml  oec_qualys_trellix.yaml  password.yml  playbook.yaml  prometheus_secrets.yml  pyproject.toml  requirements.yml  ufw.yml  unattended-upgrades.yml  vault-pass.sh  verilator.yml  vivado.yml  waiter_users.yaml  xilinx_pass.sh  xilinx_user.sh
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  (+1 more)
.schemas/: waiter_users.json
apt.conf.d/: 50unattended-upgrades
blackbox-exporter/: blackbox.yml
docker/: daemon.json  docker_secrets.yml
fail2ban/: jail.local
grafana/: grafana.ini
netplan/: 01-waiter-dhcp.yml  01-waiter.yml  99-waiter-dhcp.yml
prometheus/: prometheus.yml
scripts/: cron_hourly_zfs_snapshots.sh  deploy_label_studio_pass.sh  deploy_octoprint_api_key.sh  deploy_sam_pass.sh  install_questa_base_2023.4.sh
snapper/: docker-volumes  home  home-btrfs  root  snapper.yml
xic_config/: vitis_2022.2.txt  vivado_2018.2.txt  vivado_2019.1.txt  vivado_2020.2.txt  vivado_2022.2.txt  vivado_2024.1.txt
xrdp/: sesman.ini
(+3 files in other folders)
