[tool.poetry]
name = "waiter"
version = "0.1.0"
description = ""
authors = ["Nathan Hui <nthui@ucsd.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^9.10.0"
ansible-core = "<=2.16.99"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
