[tool.poetry]
name = "waiter"
version = "0.1.0"
description = ""
authors = ["Nathan Hui <nthui@ucsd.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^9.10.0"
ansible-core = "<=2.16.99"
passlib = "^1.7.4"
prometheus-client = "^0.21.0"
gitpython = "^3.1.43"
docker = "^7.1.0"
platformdirs = "^4.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
